--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ section {
   width: 464px;
   height: 538px;
   gap: 24px;
-  margin: 48px 240px 0px 240px;
+  margin: 48px 240px 0px 270px;
 }
 .sec-img-1 {
   width: 310px;
@@ -94,4 +94,46 @@ section {
   border-radius: 300px 300px 0px 0px;
   background: rgba(71, 125, 17, 0.15);
 }
+.img-names{
+  display: flex;
+  gap: 250px;
+ 
+  margin-left: 381px;
+  margin-right: 381px;
+  margin-bottom: 128px;
+}
+.flower-names{
+  color: #272727;
+
+  font-size: 24px;
+  font-weight: 700;
+  text-decoration-line: underline;
+}
+.support-section{
+  margin: 0px auto;
+  width: 1440px;
+padding: 50px;
+  background-position: center;
+  border-radius: 8px;
+background: rgba(39, 39, 39, 0.05);
+margin-bottom: 128px;
+}
+.flower-Support{
+  display: flex;
+ padding-bottom: 24px;
+  justify-content: space-around;
+}
+.support-p{
+  display: flex;
+  justify-content: space-around;
+  color: rgba(39, 39, 39, 0.80);
+font-size: 24px;
+font-weight: 600;
+}
+.support-img{
+  width: 88px;
+height: 88px;
+margin-top:85 px;
+}
+
 /* Main-End */
