--- a/style.css
+++ b/style.css
@@ -94,89 +94,131 @@
   border-radius: 300px 300px 0px 0px;
   background: rgba(71, 125, 17, 0.15);
 }
-.img-names{
+.img-names {
   display: flex;
   gap: 250px;
- 
+
   margin-left: 381px;
   margin-right: 381px;
   margin-bottom: 128px;
 }
-.flower-names{
+.flower-names {
   color: #272727;
 
   font-size: 24px;
   font-weight: 700;
   text-decoration-line: underline;
 }
-.support-section{
+.support-section {
   margin: 0px auto;
   width: 1440px;
-padding: 50px;
+  padding: 50px;
   background-position: center;
   border-radius: 8px;
-background: rgba(39, 39, 39, 0.05);
-margin-bottom: 128px;
+  background: rgba(39, 39, 39, 0.05);
+  margin-bottom: 128px;
 }
-.flower-Support{
+.flower-Support {
   display: flex;
- padding-bottom: 24px;
+  padding-bottom: 24px;
   justify-content: space-around;
 }
-.support-p{
+.support-p {
   display: flex;
   justify-content: space-around;
-  color: rgba(39, 39, 39, 0.80);
-font-size: 24px;
-font-weight: 600;
+  color: rgba(39, 39, 39, 0.8);
+  font-size: 24px;
+  font-weight: 600;
 }
-.support-img{
+.support-img {
   width: 88px;
-height: 88px;
-margin-top:85 px;
+  height: 88px;
+  margin-top: 85 px;
 }
-.header-benar-2{
+.header-benar-2 {
   height: 620px;
   border-radius: 8px;
   background: rgba(229, 84, 115, 0.05);
   margin-bottom: 128px;
 }
-.benar-img-2{
+.benar-img-2 {
   width: 318px;
-height: 420px;
-margin-top: 100px;
+  height: 420px;
+  margin-top: 100px;
 }
-.benar-title-2{
+.benar-title-2 {
   color: #272727;
-font-size: 40px;
-font-weight: 800;
+  font-size: 40px;
+  font-weight: 800;
 }
-.Instagram-sec{
- 
+.Instagram-sec {
   width: 1440px;
   margin: 0px auto;
   background-position: center;
 }
-.Instagram-title{
+.Instagram-title {
   color: #272727;
-text-align: center;
-font-size: 40px;
-font-weight: 800;
-}
-.insta-description{
-  color: rgba(39, 39, 39, 0.60);
   text-align: center;
-font-size: 18px;
-font-weight: 400;
-padding-top: 24px;
-margin-bottom: 48px;
+  font-size: 40px;
+  font-weight: 800;
 }
-.insta-img{
+.insta-description {
+  color: rgba(39, 39, 39, 0.6);
+  text-align: center;
+  font-size: 18px;
+  font-weight: 400;
+  padding-top: 24px;
+  margin-bottom: 48px;
+}
+.insta-img {
   display: flex;
   gap: 24px;
   width: 342px;
-height: 396px;
-margin-bottom: 128px;
+  height: 396px;
+  margin-bottom: 128px;
 }
-
+.last-sec {
+  width: 1440px;
+  height: 449px;
+  margin: 0px auto;
+  background-position: center;
+  background-image: url("./Flower Asset/Rectangle\ 9.png");
+}
+.last {
+  text-align: center;
+}
+.last-title {
+  color: #272727;
+  font-size: 40px;
+  font-weight: 800;
+  padding-top: 122px;
+}
+.last-p {
+  color: rgba(39, 39, 39, 0.6);
+  font-size: 18px;
+  font-weight: 400;
+  padding-top: 16px;
+}
+.last-input {
+  padding-top: 48px;
+}
+.last-in {
+  width: 700px;
+  height: 64px;
+  border-radius: 8px;
+  color: rgba(39, 39, 39, 0.6);
+  font-size: 16px;
+  font-weight: 400;
+  padding: 22px 0px 22px 22px;
+  background: #fff;
+}
+.last-btn{
+  padding: 18px 30px;
+border-radius: 8px;
+background: #E55473;
+color: #FFF;
+font-size: 20px;
+font-weight: 700;
+margin-left: 16px;
+}
 /* Main-End */
