--- a/style.css
+++ b/style.css
@@ -138,6 +138,7 @@
   text-align: center;
   font-size: 40px;
   font-weight: 800;
+  margin-top: 128px;
 }
 .insta-description {
   color: rgba(39, 39, 39, 0.6);
