--- a/style.css
+++ b/style.css
@@ -320,54 +320,72 @@ footer {
   padding-top: 32px;
   padding-bottom: 128px;
 }
-.hide{
+.hide {
   display: none;
 }
 /* Footer-End */
-@media screen and (max-width:576px) {
-  .header ,.section-images ,.benar-container,.extra-sec,.Instagram-sec,.contac-sec ,.contac-form{
+@media screen and (max-width: 576px) {
+  .header,
+  .section-images,
+  .benar-container,
+  .extra-sec,
+  .Instagram-sec,
+  .contac-sec,
+  .contac-form {
     flex-direction: column;
     height: 100%;
-   width: 100%;
+    width: 100%;
     padding: 10px;
   }
   .benar {
-    padding:20px;
+    padding: 20px;
   }
-  .benar-img , .benar-titel,.benar-description,.first-section ,.section-title,.section-description ,.benar-titel-2,.benar-description-2,.extra-title,.extra,form input {
+  .benar-img,
+  .benar-titel,
+  .benar-description,
+  .first-section,
+  .section-title,
+  .section-description,
+  .benar-titel-2,
+  .benar-description-2,
+  .extra-title,
+  .extra,
+  form input {
     width: 100%;
   }
-  .extra-img ,.insta-img{
+  .extra-img,
+  .insta-img {
     flex-direction: column;
     height: 100%;
     width: 100%;
     margin: auto;
-    
   }
-  
-  .benar-img-2 ,.last-sec,.last-in{
+
+  .benar-img-2,
+  .last-sec,
+  .last-in {
     height: 100%;
     width: 100%;
     margin: auto;
   }
-  .last-btn{
+  .last-btn {
     margin-top: 10px;
   }
-  .section-images{
+  .section-images {
     width: 100%;
     height: 100%;
     padding-top: 20px;
-  gap: 24px;
+    gap: 24px;
   }
-  .sec-img-name,.Flowers-price {
+  .sec-img-name,
+  .Flowers-price {
     display: none;
   }
   .primary-btn-2 {
     margin: auto;
   }
-  .contac-img{
+  .contac-img {
     width: 100%;
     padding: 0;
   }
-
 }
